Fix streams list getting covered by nav bar before wrapping while user is shrinking the window

--- a/src/app/styles/main.styl
+++ b/src/app/styles/main.styl
@@ -14,6 +14,11 @@ body {
     overflow: hidden
 }
 
+#allWrap {
+    width: 100vw
+    height: 100vh
+}
+
 h1 {
     font-size: 2.2rem
 }
@@ -56,8 +61,8 @@ button {
 
 main {
     display: grid
-    height: 100vh
-    width: 100vw
+    height: 100%
+    width: 100%
     grid-template-rows: var(--size_navBar) 1fr
     grid-template-areas: \
         "nav" \
@@ -71,7 +76,7 @@ section.content {
 
 @media (min-width: $sz_breakpoint) {
     :root {
-        --size_navBar: 60px
+        --size_navBar: $sz_vertNavBar
     }
 
     main {
